# frappe-app-starter

./: CLAUDE.md  TEAM.md
.github/workflows/: brain-pr-review.yml
{{app_name}}/: README.md  pyproject.toml
{{app_name}}/{{app_name}}/: hooks.py  modules.txt  patches.txt
{{app_name}}/{{app_name}}/config/: desktop.py
