[project]
name = "{{app_name}}"
authors = [{ name = "Enfono Technologies", email = "team@enfono.com" }]
description = "{{app_description}}"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = ["frappe~=15.0.0"]

[build-system]
requires = ["flit_core>=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "{{app_name}}"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
